Bug 486922 - Error when changing the global theme
Summary: Error when changing the global theme
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.27.5
Platform: Debian stable Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
: 485347 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-05-12 16:06 UTC by Alexis
Modified: 2024-09-18 16:22 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexis 2024-05-12 16:06:29 UTC
Application: systemsettings (5.27.5)

Qt Version: 5.15.8
Frameworks Version: 5.103.0
Operating System: Linux 6.1.0-20-amd64 x86_64
Windowing System: X11
Distribution: Debian GNU/Linux 12 (bookworm)
DrKonqi: 5.27.5 [KCrashBackend]

-- Information about the crash:
solo estaba cambiando el tema global cuando crasheo y se cerró

The crash can be reproduced sometimes.

-- Backtrace:
Application: Preferencias del sistema (systemsettings), signal: Aborted

[KCrash Handler]
#4  0x00007fadc5ca9e2c in ?? () from /lib/x86_64-linux-gnu/libc.so.6
#5  0x00007fadc5c5afb2 in raise () from /lib/x86_64-linux-gnu/libc.so.6
#6  0x00007fadc5c45472 in abort () from /lib/x86_64-linux-gnu/libc.so.6
#7  0x00007fadc5e90c79 in QMessageLogger::fatal(char const*, ...) const () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007fadc3c78548 in QQmlData::destroyed(QObject*) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#9  0x00007fadc60e6cb2 in QObject::~QObject() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007fad8e3daccd in ?? () from /usr/lib/x86_64-linux-gnu/qt5/qml/QtQuick/Templates.2/libqtquicktemplates2plugin.so
#11 0x00007fadc60db28e in QObjectPrivate::deleteChildren() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#12 0x00007fadc60e7054 in QObject::~QObject() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#13 0x00007fadac029200 in ?? () from /usr/lib/x86_64-linux-gnu/qt5/qml/QtQuick/Layouts/libqquicklayoutsplugin.so
#14 0x00007fadc60db28e in QObjectPrivate::deleteChildren() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#15 0x00007fadc60e7054 in QObject::~QObject() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#16 0x00007fadac029480 in ?? () from /usr/lib/x86_64-linux-gnu/qt5/qml/QtQuick/Layouts/libqquicklayoutsplugin.so
#17 0x00007fadc60db28e in QObjectPrivate::deleteChildren() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#18 0x00007fadc60e7054 in QObject::~QObject() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#19 0x00007fadc3c7af7b in ?? () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#20 0x00007fadc60db28e in QObjectPrivate::deleteChildren() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#21 0x00007fadc60e7054 in QObject::~QObject() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#22 0x00007fad8e3da695 in ?? () from /usr/lib/x86_64-linux-gnu/qt5/qml/QtQuick/Templates.2/libqtquicktemplates2plugin.so
#23 0x00007fadc46a6a0a in KDeclarative::QmlObject::~QmlObject() () from /lib/x86_64-linux-gnu/libKF5Declarative.so.5
#24 0x00007fadc46a7769 in KDeclarative::QmlObjectSharedEngine::~QmlObjectSharedEngine() () from /lib/x86_64-linux-gnu/libKF5Declarative.so.5
#25 0x00007fadc46bad91 in KQuickAddons::ConfigModule::~ConfigModule() () from /lib/x86_64-linux-gnu/libKF5QuickAddons.so.5
#26 0x00007fad8e096fcd in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/plasma/kcms/systemsettings/kcm_lookandfeel.so
#27 0x00007fadc6b03e13 in ?? () from /lib/x86_64-linux-gnu/libKF5KCMUtils.so.5
#28 0x00007fadc6b03e39 in ?? () from /lib/x86_64-linux-gnu/libKF5KCMUtils.so.5
#29 0x00007fadc6b01da4 in KCModuleProxy::deleteClient() () from /lib/x86_64-linux-gnu/libKF5KCMUtils.so.5
#30 0x00007fadc6b035bd in KCModuleProxy::~KCModuleProxy() () from /lib/x86_64-linux-gnu/libKF5KCMUtils.so.5
#31 0x00007fadc6b038a9 in KCModuleProxy::~KCModuleProxy() () from /lib/x86_64-linux-gnu/libKF5KCMUtils.so.5
#32 0x00007fadc60db28e in QObjectPrivate::deleteChildren() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#33 0x00007fadc6da07b6 in QWidget::~QWidget() () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#34 0x00007fadc6da0af9 in QWidget::~QWidget() () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#35 0x00007fadc60db28e in QObjectPrivate::deleteChildren() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#36 0x00007fadc6da07b6 in QWidget::~QWidget() () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#37 0x00007fadc6f00e69 in QScrollArea::~QScrollArea() () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#38 0x00007fadc7580273 in KPageWidgetItem::~KPageWidgetItem() () from /lib/x86_64-linux-gnu/libKF5WidgetsAddons.so.5
#39 0x00007fadc7580d64 in ?? () from /lib/x86_64-linux-gnu/libKF5WidgetsAddons.so.5
#40 0x00007fadc758157a in KPageWidgetModel::removePage(KPageWidgetItem*) () from /lib/x86_64-linux-gnu/libKF5WidgetsAddons.so.5
#41 0x00007fadc7a625ed in ModuleView::closeModules() () from /lib/x86_64-linux-gnu/libsystemsettingsview.so.3
#42 0x00007fadac5253ed in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/systemsettingsview/systemsettings_sidebar_mode.so
#43 0x00007fadac522893 in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/systemsettingsview/systemsettings_sidebar_mode.so
#44 0x00007fadc3c822c1 in QQmlPropertyPrivate::write(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyData::WriteFlag>) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#45 0x00007fadc3ba68ba in QV4::QObjectWrapper::setProperty(QV4::ExecutionEngine*, QObject*, QQmlPropertyData*, QV4::Value const&) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#46 0x00007fadc3ba6ffb in QV4::QObjectWrapper::setQmlProperty(QV4::ExecutionEngine*, QQmlContextData*, QObject*, QV4::String*, QV4::QObjectWrapper::RevisionMode, QV4::Value const&) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#47 0x00007fadc3ba715b in QV4::QObjectWrapper::virtualPut(QV4::Managed*, QV4::PropertyKey, QV4::Value const&, QV4::Value*) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#48 0x00007fadc3b6cf02 in QV4::Object::virtualResolveLookupSetter(QV4::Object*, QV4::ExecutionEngine*, QV4::Lookup*, QV4::Value const&) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#49 0x00007fadc3bc13a4 in ?? () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#50 0x00007fadc3bc53df in ?? () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#51 0x00007fadc3b57c2e in QV4::Function::call(QV4::Value const*, QV4::Value const*, int, QV4::ExecutionContext const*) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#52 0x00007fadc3ce144d in QQmlJavaScriptExpression::evaluate(QV4::CallData*, bool*) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#53 0x00007fadc3c92baf in QQmlBoundSignalExpression::evaluate(void**) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#54 0x00007fadc3c942f8 in ?? () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#55 0x00007fadc3cc677f in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#56 0x00007fadc60e8a8d in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#57 0x00007fadc1394221 in QQuickAbstractButtonPrivate::handleRelease(QPointF const&) () from /lib/x86_64-linux-gnu/libQt5QuickTemplates2.so.5
#58 0x00007fadc13b3251 in QQuickControl::mouseReleaseEvent(QMouseEvent*) () from /lib/x86_64-linux-gnu/libQt5QuickTemplates2.so.5
#59 0x00007fadc42550e8 in QQuickItem::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#60 0x00007fadc6d62fae in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#61 0x00007fadc60b16f8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#62 0x00007fadc42729da in QQuickWindowPrivate::deliverMouseEvent(QQuickPointerMouseEvent*) () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#63 0x00007fadc42740dd in QQuickWindowPrivate::deliverPointerEvent(QQuickPointerEvent*) () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#64 0x00007fadc65493f5 in QWindow::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#65 0x00007fadc6d62fae in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#66 0x00007fadc60b16f8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#67 0x00007fadc4d4a057 in QQuickWidget::mouseReleaseEvent(QMouseEvent*) () from /lib/x86_64-linux-gnu/libQt5QuickWidgets.so.5
#68 0x00007fadc6da4db8 in QWidget::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#69 0x00007fadc6d62fae in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#70 0x00007fadc6d6b552 in QApplication::notify(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#71 0x00007fadc60b16f8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#72 0x00007fadc6d6965e in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#73 0x00007fadc6dbdbd8 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#74 0x00007fadc6dc0f60 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#75 0x00007fadc6d62fae in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#76 0x00007fadc60b16f8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#77 0x00007fadc653d3ed in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#78 0x00007fadc6511cac in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#79 0x00007fadc00fbeca in ?? () from /lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#80 0x00007fadc471e7a9 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#81 0x00007fadc471ea38 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#82 0x00007fadc471eacc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#83 0x00007fadc6109836 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#84 0x00007fad8dfa8c80 in runRdb(unsigned int) () from /lib/x86_64-linux-gnu/libkrdb.so
#85 0x00007fad8e0a7c9a in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/plasma/kcms/systemsettings/kcm_lookandfeel.so
#86 0x00007fad8e0a2b6e in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/plasma/kcms/systemsettings/kcm_lookandfeel.so
#87 0x00007fad8e0a5dd8 in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/plasma/kcms/systemsettings/kcm_lookandfeel.so
#88 0x00007fad8e09aef8 in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/plasma/kcms/systemsettings/kcm_lookandfeel.so
#89 0x00007fad8e094f03 in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/plasma/kcms/systemsettings/kcm_lookandfeel.so
#90 0x00007fadc3cc6c93 in ?? () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#91 0x00007fadc3ba20bd in ?? () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#92 0x00007fadc3ba53e0 in QV4::QObjectMethod::callInternal(QV4::Value const*, QV4::Value const*, int) const () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#93 0x00007fadc3bd48aa in QV4::Runtime::CallPropertyLookup::call(QV4::ExecutionEngine*, QV4::Value const&, unsigned int, QV4::Value*, int) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#94 0x00007fadad070872 in ?? ()
#95 0x0000000000000000 in ?? ()
[Inferior 1 (process 114071) detached]

The reporter indicates this bug may be a duplicate of or related to bug 449853, bug 449920, bug 450164, bug 451250, bug 451905, bug 452163, bug 452279, bug 452783, bug 453861, bug 454834, bug 457288, bug 460386, bug 460867, bug 460998, bug 461566, bug 461610, bug 461759, bug 464537, bug 466908, bug 470981, bug 474254, bug 479507, bug 481514, bug 485347, bug 486029.

Reported using DrKonqi
Comment 1 teadrinkingprogrammer 2024-05-12 19:49:09 UTC
Translation: "I was just changing the global theme when it crashed and closed"
Comment 2 Nicolas Fella 2024-09-01 12:11:02 UTC
*** Bug 485347 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2024-09-01 12:27:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4671
Comment 4 Nicolas Fella 2024-09-18 14:10:20 UTC
Git commit aaf0cc601a7a9ed455e2a61906ed46b6e275f007 by Nicolas Fella.
Committed on 18/09/2024 at 14:09.
Pushed by nicolasfella into branch 'master'.

[krdb] Don't manually process events when applying Qt settings

Manually processing events like this can cause unpredictable behavior and for QML apps like systemsettings cause crashes

It's also not necessary, the config we are applying isn't used by systemsettings/modern Qt apps anyway

SENTRY: SYSTEMSETTINGS-3RP

M  +0    -2    kcms/krdb/krdb.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/aaf0cc601a7a9ed455e2a61906ed46b6e275f007
Comment 5 Nicolas Fella 2024-09-18 14:12:17 UTC
Git commit e81dde14d9f9c98bdce4cc5536b105a6adc3613b by Nicolas Fella.
Committed on 18/09/2024 at 14:12.
Pushed by nicolasfella into branch 'Plasma/6.2'.

[krdb] Don't manually process events when applying Qt settings

Manually processing events like this can cause unpredictable behavior and for QML apps like systemsettings cause crashes

It's also not necessary, the config we are applying isn't used by systemsettings/modern Qt apps anyway

SENTRY: SYSTEMSETTINGS-3RP
(cherry picked from commit aaf0cc601a7a9ed455e2a61906ed46b6e275f007)

M  +0    -2    kcms/krdb/krdb.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/e81dde14d9f9c98bdce4cc5536b105a6adc3613b