[krdb] Don't manually process events when applying Qt settings

Manually processing events like this can cause unpredictable behavior and for QML apps like systemsettings cause crashes

It's also not necessary, the config we are applying isn't used by systemsettings/modern Qt apps anyway

BUG: 486922

SENTRY: SYSTEMSETTINGS-3RP